# langgraph_ai

./: README.md  main.py  project1.ipynb  project2.ipynb  project3.ipynb  project4_topic_research.ipynb  project5_essay_evaluation.ipynb  pyproject.toml
chatbot/: backend.py  frontend.py
practice_projects/: p6_quadratic_equation.ipynb  p7_review_analysis.ipynb  p8_content_optimizer.ipynb  p9_chatbot.ipynb  project6_quadratic_equation.ipynb
