[project]
name = "langgraph-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.15",
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=1.1.13",
    "langchain-openrouter>=0.2.1",
    "langgraph>=1.1.6",
    "streamlit>=1.56.0",
]
